css/obBase.css
/* ... */
.flexRow-center {
  justify-content: center;
}

.flexRow [class |= "flexCol"] {
  box-sizing: border-box;
  position: relative;
}

.flexRow.pad [class |= "flexCol"] {
  padding-left: 5px;
  padding-right: 5px;
}

.flexRow.pad [class |= "flexCol"]:first-child {
  padding-left: 0;
}

.flexRow.pad [class |= "flexCol"]:last-child {
  padding-right: 0;
}

.flexRow .flexCol-12 {
  /* normally you can make it 100% wide by not using a column. This is here if you need to switch column sizes dynamically. */
  width: 100%;
}

.flexRow .flexCol-11 { flex-basis: 91.66666666666666%; }

.flexRow .flexCol-10 { flex-basis: 83.33333333333334%; }

.flexRow .flexCol-9 { flex-basis: 75%; }

.flexRow .flexCol-8 { flex-basis: 66.66666666666666%; }

.flexRow .flexCol-7 { flex-basis: 58.333333333333336%; }

.flexRow .flexCol-6 { flex-basis: 50%; }

.flexRow .flexCol-5 { flex-basis: 41.66666666666667%; }

.flexRow .flexCol-4 { flex-basis: 33.33333333333333%; }

.flexRow .flexCol-3 { flex-basis: 25%; }

.flexRow .flexCol-2 { flex-basis: 16.666666666666664%;; }

.flexRow .flexCol-1 { flex-basis: 8.333333333333332%; }

.flexExpand {
  /* use to make only one item in a flex row expand */
  flex-grow: 1;
}

.gridItem {
  box-sizing: border-box;
  padding: 25px 33px;
}

.itemImg {
  height: 250px;
  width: 250px;
  background-size: cover;
  background-position: center;
  border-radius: 4px;
  position: relative;
}

.itemImg.itemImg-large {
  /* flex row collapses unless a specific height is set */
  height: 357px;
  width: 357px;
}

.itemImg.itemImg-small {
  height: 82px;
  width: 82px;
}

.rowItem {
  flex-grow: 1;
  padding: 10px 15px;
}

.rowItem input[type=radio] {
  vertical-align: middle;
  margin-top: 0;
}

.fieldItem {
  min-height: 50px;
  line-height: 50px;
  padding: 0 15px;
  position: relative;
}

.table {
  display: table;
  table-layout: fixed;
}

.table > div {
  display: table-row;
}

.table > div > div {
  display: table-cell;
  vertical-align: top;
}

.btn {
  display: inline-block;
  padding: 6px 12px;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
}

.thumbnail {
  height: 30px;
  width: 30px;
  margin-right: 6px;
  background-size: cover;
  background-position: center;
  border-radius: 2px;
}

.thumbnail-large {
  height: 80px;
  width: 80px;
}

.row10 {
  margin-bottom: 10px;
}

.row20 {
  margin-bottom: 20px;
}

.rowTop20 {
  margin-top: 20px;
}

.pad15 {
  padding-left: 15px;
  padding-right: 15px;
}

.pad20 {
  padding-left: 20px;
  padding-right: 20px;
}

.pad20Right {
  padding-right: 20px;
}

.popMenu {
  position: absolute;
  z-index: 1;
}

.modal {
  position: fixed;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.modal.modal-navOffset {
  top: 50px;
}

.modal-child {
  width: 525px;
  height: 590px;
  margin: 80px auto 0 auto;
  position: relative;
}

.modal.modal-navOffset .modal-child {
  margin-top: 25px;
}

.accordian {
  overflow: hidden;
  position: relative;
}

.accordian > .accordian-window {
  position: absolute;
}

.accordian > .accordian-window > .accordian-child {
  float: left;
}

/*========== typography ==========*/

h1,h2,h3 {
  margin: 0 0 20px 0;
  line-height: 1.2;
  font-weight: 700;
}

h4,h5,h6 {
  margin: 0 0 10px 0;
  line-height: 1;
  font-weight: 700;
}

h3 {
  font-size: 18px;
}

h5 {
  font-size: 16px;
}

h6 {
  font-size: 15px;
}

.txt-center {
  text-align: center;
}

.txt-fade {
  opacity: 0.75;
}

.txt-lowleading {
  line-height: 1.2;
}
.txt-unleaded {
  line-height: 1;
}

.unbold {
  font-weight: 400;
}

.allCaps {
  text-transform: uppercase;
}
/*========== skin classes ==========*/

.body-neutral {
  background-color: #2a2a2a;
}

.navBar {
  background-color: #327EB8;
}

.body-neutral .navBar {
  background-color: #575757;
}

.mainContainer {
  background-color: #086A9E;
}

.body-neutral .mainContainer {
  background-color: #4a4848;
}

.modal-opaque {
  background-color: rgb(7,65,97);
  box-shadow: inset 0px -70px 112px -62px rgba(37,37,37,.9);
}

.modal-opaque.modal-navBlock {
  background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.2) 50px, rgba(7,65,97,1) 51px);
}

.modal-childMain {
  border-radius: 3px;
  background-color: #327eb8;
  box-shadow: 0px 0 0 rgba(0, 0, 0, 0.15);
}

.flex-border > .flexRow {
  /* hide the extra border on the right and bottom sides */
  margin: 0 -1px -1px 0;
  width: auto;
  overflow: hidden;
}

.flex-border > .flexRow > [class |= "flexCol"] {
  border-right: 1px solid rgba(255,255,255,0.08);
  border-bottom: 1px solid rgba(255,255,255,0.08);
  padding: 0 1px 1px 0;
}

.flex-border > .flexRow > [class |= "flexCol"].pad10 {
  padding: 0 11px 1px 10px;
}

.flex-border > .flexRow > [class |= "flexCol"].pad20 {
  padding: 0 21px 1px 20px;
}

.flex-border > .flexRow > .flexRow {
  /* containing row has a list of rows inside it */
  border-bottom: 1px solid rgba(255,255,255,0.08);
}

.flex-border .flex-border > .flexRow > .flexRow:last-child {
  /* when nested, the last row should not have a border */
  border-bottom: none;
}

.box-border {
  border: 1px solid rgba(255,255,255,0.08);
}

.txtField {
  width: 100%;
  height: 32px;
  border-radius: 4px;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
  opacity: .85;
  transition: opacity .3s cubic-bezier(0, 0, 0.2, 1);
}

.txtFieldWrapper {
  position: relative;
  width: 100%;
}

.txtFieldWrapper:before {
  font-family: Ionicons;
  position: absolute;
  top: 7px;
  left: 7px;
  font-size: 18px;
  color: #000;
  opacity: 0.4;
  z-index: 1;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
}

.searchWrapper:before {
  content: "\f4a5"
}

.searchWrapper .txtField {
  text-indent: 24px; /* make room for icon */
}

.txtField-bar,
input[type="text"].txtField-bar {
  background: none;
  border-radius: 0;
  opacity: 1;
  color: #fff;
  padding: 13px;
  height: 45px;
  box-shadow: none;
}
/* ... */

